Bug 1933892 - missing/misplaced horizontal scrollbar on bug lists

--- a/skins/standard/buglist.css
+++ b/skins/standard/buglist.css
@@ -213,15 +213,18 @@ td.bz_total {
   }
 
   .bz_buglist.responsive tbody td {
-    display: flex;
+    display: flow-root;
     gap: 4px;
-    padding: 2px 0 !important;
+    margin-block: 8px;
+    padding: 0 0 0 90px !important;
     width: auto;
     text-align: left;
   }
 
   .bz_buglist.responsive tbody td::before {
     display: block;
+    float: left;
+    margin-inline: -90px 10px;
     min-width: 80px;
     color: var(--secondary-label-color);
     font-size: var(--font-size-small);
